Bug 323311 - Desktop cube effect is broken with multiple screens
Summary: Desktop cube effect is broken with multiple screens
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: multi-screen (other bugs)
Version First Reported In: 4.10.97
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/112...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-09 15:17 UTC by Igor Poboiko
Modified: 2013-08-27 06:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments
Glitched KWin cube effect (180.84 KB, image/png)
2013-08-09 15:18 UTC, Igor Poboiko
Details
qdbus org.kde.kwin /KWin supportInformation (5.82 KB, text/plain)
2013-08-15 09:55 UTC, Igor Poboiko
Details
xrandr -q (704 bytes, text/plain)
2013-08-15 09:56 UTC, Igor Poboiko
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Igor Poboiko 2013-08-09 15:17:52 UTC
I have a workstation where external monitor is connected to my laptop. Whole system is configured using KScreen. The desktop cube effect looks glitched. See attached screenshot.

Reproducible: Always
Comment 1 Igor Poboiko 2013-08-09 15:18:48 UTC
Created attachment 81616 [details]
Glitched KWin cube effect
Comment 2 Martin Flöser 2013-08-09 17:47:14 UTC
Yeah I can reproduce.

Thomas: are you sure that your screen count timer change did not introduce a 
regression?
Comment 3 Thomas Lübking 2013-08-09 18:42:37 UTC
The latest commit is not in 4.10.97 but only 4.11, but i would rather expect the commit before the latest change (the one reported to cause "twisted" output on screen resetup) to be prone to cause errors in this regard.

I can't atm. reptroduce this on my branch and the nvidia blob - neither with kscreen nor with xrandr shortcut configuration (while kscreen apparently does more fuzz) - regardless of the GL mode and whether the compositor started before or after the screen update.

I'll try on stock 4.11, but but don't think there's sth. relevant reg. this in my branch.

Questions:
- please provide the output of "qdbus org.kde.kwin /KWin supportInformation"
- please provide the output of "xrandr -q" for the setup before and after the change causing the issue.
- does restarting the compositor (shift+alt+F12 twice) "fix" it?
- since the screenshot looks like the desktops have a slight rotation against the caps, does it also happen on OpenGL 1.2
- does it (on GL2/3) also happen with the scale methos NOT being "accurate" (settings in "kcmshell4 kwincompositing")
- does it also happen if you configure the screens using xrandr (use --auto and --left-of, --right-of)
Comment 4 Martin Flöser 2013-08-09 19:42:55 UTC
> The latest commit is not in 4.10.97 but only 4.11
might be that I'm not running the latest code
> - does restarting the compositor (shift+alt+F12 twice) "fix" it?
at least for me it did
Comment 5 Thomas Lübking 2013-08-09 20:00:17 UTC
Doesn't happen on stock origin/4.11 either.
Check that you've b0dbf3b49adf26753805cd59576dd3db61b86328

- Does it also happen on more "trivial" updates? (rotation)
Comment 6 Thomas Lübking 2013-08-14 21:23:29 UTC
Anyone any news on this?
Comment 7 Igor Poboiko 2013-08-15 09:55:03 UTC
Created attachment 81719 [details]
qdbus org.kde.kwin /KWin supportInformation
Comment 8 Igor Poboiko 2013-08-15 09:56:13 UTC
Created attachment 81720 [details]
xrandr -q

The output is the same before glitch appears and after it. Also it disappears after restarting compositing too.
Comment 9 Igor Poboiko 2013-08-15 10:09:54 UTC
> does it also happen if you configure the screens using xrandr (use --auto and --left-of, --right-of)
It occurs when I use xrandr tool too, but not always (when I play with disabling/enabling compositing and various xrandr commands, it sometimes occurs and sometimes doesn't).

> since the screenshot looks like the desktops have a slight rotation against the caps, does it also happen on OpenGL 1.2
I didn't manage to reproduce it using OpenGL 1.2.

> does it (on GL2/3) also happen with the scale methos NOT being "accurate" (settings in "kcmshell4 kwincompositing")
Yep, reproduced it with "Smooth" method.
Comment 10 Igor Poboiko 2013-08-15 10:39:11 UTC
Forgot to mention: tested with KWin from KDE SC 4.11.0 release.
Comment 11 Thomas Lübking 2013-08-15 11:23:06 UTC
Polluted shader it seems.
I just reproduced it.

-> Can you reproduce it when deactivating wobbly windows?
Comment 12 Igor Poboiko 2013-08-15 11:33:35 UTC
(In reply to comment #11)
> Can you reproduce it when deactivating wobbly windows?
Yes.
Comment 13 Thomas Lübking 2013-08-27 06:07:24 UTC
Git commit 1c746807fd47515acd59e280fb123d7f1baf93d7 by Thomas Lübking.
Committed on 17/08/2013 at 14:46.
Pushed by luebking into branch 'KDE/4.11'.

reset custom cube shaders on screen change

the reset/setup invokes the viewport dimensions...
FIXED-IN: 4.11.1
REVIEW: 112133

M  +9    -0    kwin/effects/cube/cube.cpp
M  +1    -0    kwin/effects/cube/cube.h
M  +10   -0    kwin/libkwineffects/kwinglutils.cpp
M  +6    -0    kwin/libkwineffects/kwinglutils.h

http://commits.kde.org/kde-workspace/1c746807fd47515acd59e280fb123d7f1baf93d7